Initial, minor changes to work with my PC and FPGA card.
FPGA HDMI not working, need constraints and clock edits.

--- a/sim/Makefile
+++ b/sim/Makefile
@@ -7,7 +7,8 @@ SOURCE_MAIN_HDMI_V = top_hdmi_sim.sv
 
 FLAGS := -Wall -Wno-TIMESCALEMOD -Wno-UNUSED  --trace -cc 
 CFLAGS := -Os
-LDFLAGS  := -L$(ROOT_DIR)/minifb/build/ -lX11 -lminifb
+#LDFLAGS  := -L$(ROOT_DIR)/minifb/build/ -lX11 -lminifb
+LDFLAGS  := -L$(ROOT_DIR)/minifb/build -lminifb -L/usr/lib/x86_64-linux-gnu/ -lX11
 
 all: vgasim_vga_window Vvgasim_vga_bitmap vgasim_hdmi_window
 
